app-HelmChart/templates/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - javaforall.tech
      secretName: secret-tls
  rules:
    - host: javaforall.tech
      http:
        paths:
          - path: /api/test
            pathType: Prefix
            backend:
              service:
                name: myname
                port:
                  number: 8080
